--- a/Cocos2Dx/Packed/enemy.plist
+++ b/Cocos2Dx/Packed/enemy.plist
@@ -4,7 +4,7 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>frame_0.gif</key>
+            <key>enemy (1).gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{108,757},{104,149}}</string>
@@ -17,20 +17,7 @@
                 <key>sourceSize</key>
                 <string>{108,149}</string>
             </dict>
-            <key>frame_1.gif</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,606},{106,149}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{1,0},{106,149}}</string>
-                <key>sourceSize</key>
-                <string>{108,149}</string>
-            </dict>
-            <key>frame_10.gif</key>
+            <key>enemy (10).gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{332,153},{108,149}}</string>
@@ -43,7 +30,7 @@
                 <key>sourceSize</key>
                 <string>{108,149}</string>
             </dict>
-            <key>frame_11.gif</key>
+            <key>enemy (11).gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{222,153},{108,149}}</string>
@@ -56,85 +43,7 @@
                 <key>sourceSize</key>
                 <string>{108,149}</string>
             </dict>
-            <key>frame_12.gif</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,455},{106,149}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{1,0},{106,149}}</string>
-                <key>sourceSize</key>
-                <string>{108,149}</string>
-            </dict>
-            <key>frame_13.gif</key>
-            <dict>
-                <key>frame</key>
-                <string>{{326,304},{106,149}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{1,0},{106,149}}</string>
-                <key>sourceSize</key>
-                <string>{108,149}</string>
-            </dict>
-            <key>frame_14.gif</key>
-            <dict>
-                <key>frame</key>
-                <string>{{218,304},{106,149}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{1,0},{106,149}}</string>
-                <key>sourceSize</key>
-                <string>{108,149}</string>
-            </dict>
-            <key>frame_15.gif</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,757},{104,149}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{2,0},{104,149}}</string>
-                <key>sourceSize</key>
-                <string>{108,149}</string>
-            </dict>
-            <key>frame_2.gif</key>
-            <dict>
-                <key>frame</key>
-                <string>{{110,304},{106,149}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{1,0},{106,149}}</string>
-                <key>sourceSize</key>
-                <string>{108,149}</string>
-            </dict>
-            <key>frame_3.gif</key>
-            <dict>
-                <key>frame</key>
-                <string>{{2,304},{106,149}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{1,0},{106,149}}</string>
-                <key>sourceSize</key>
-                <string>{108,149}</string>
-            </dict>
-            <key>frame_4.gif</key>
+            <key>enemy (12).gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{112,153},{108,149}}</string>
@@ -147,7 +56,98 @@
                 <key>sourceSize</key>
                 <string>{108,149}</string>
             </dict>
-            <key>frame_5.gif</key>
+            <key>enemy (13).gif</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,606},{106,149}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{1,0},{106,149}}</string>
+                <key>sourceSize</key>
+                <string>{108,149}</string>
+            </dict>
+            <key>enemy (14).gif</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,455},{106,149}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{1,0},{106,149}}</string>
+                <key>sourceSize</key>
+                <string>{108,149}</string>
+            </dict>
+            <key>enemy (15).gif</key>
+            <dict>
+                <key>frame</key>
+                <string>{{326,304},{106,149}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{1,0},{106,149}}</string>
+                <key>sourceSize</key>
+                <string>{108,149}</string>
+            </dict>
+            <key>enemy (16).gif</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,757},{104,149}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{2,0},{104,149}}</string>
+                <key>sourceSize</key>
+                <string>{108,149}</string>
+            </dict>
+            <key>enemy (2).gif</key>
+            <dict>
+                <key>frame</key>
+                <string>{{218,304},{106,149}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{1,0},{106,149}}</string>
+                <key>sourceSize</key>
+                <string>{108,149}</string>
+            </dict>
+            <key>enemy (3).gif</key>
+            <dict>
+                <key>frame</key>
+                <string>{{110,304},{106,149}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{1,0},{106,149}}</string>
+                <key>sourceSize</key>
+                <string>{108,149}</string>
+            </dict>
+            <key>enemy (4).gif</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,304},{106,149}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{1,0},{106,149}}</string>
+                <key>sourceSize</key>
+                <string>{108,149}</string>
+            </dict>
+            <key>enemy (5).gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,153},{108,149}}</string>
@@ -160,7 +160,7 @@
                 <key>sourceSize</key>
                 <string>{108,149}</string>
             </dict>
-            <key>frame_6.gif</key>
+            <key>enemy (6).gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{332,2},{108,149}}</string>
@@ -173,7 +173,7 @@
                 <key>sourceSize</key>
                 <string>{108,149}</string>
             </dict>
-            <key>frame_7.gif</key>
+            <key>enemy (7).gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{222,2},{108,149}}</string>
@@ -186,7 +186,7 @@
                 <key>sourceSize</key>
                 <string>{108,149}</string>
             </dict>
-            <key>frame_8.gif</key>
+            <key>enemy (8).gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{112,2},{108,149}}</string>
@@ -199,7 +199,7 @@
                 <key>sourceSize</key>
                 <string>{108,149}</string>
             </dict>
-            <key>frame_9.gif</key>
+            <key>enemy (9).gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,2},{108,149}}</string>
@@ -222,7 +222,7 @@
             <key>size</key>
             <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:291b83639032da6f2362f32c74a8be99$</string>
+            <string>$TexturePacker:SmartUpdate:9f034f750d35f247581ce73ea1a080ff$</string>
             <key>textureFileName</key>
             <string>enemy.pvr.ccz</string>
         </dict>
