--- a/Cocos2Dx/Packed/explosion2.plist
+++ b/Cocos2Dx/Packed/explosion2.plist
@@ -4,62 +4,62 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>frame_0.gif</key>
+            <key>explosion2_0.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{451,2},{59,75}}</string>
+                <string>{{412,2},{59,75}}</string>
                 <key>offset</key>
                 <string>{1,7}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{50,70},{59,75}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_1.gif</key>
+            <key>explosion2_1.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{230,891},{107,131}}</string>
+                <string>{{372,620},{107,131}}</string>
                 <key>offset</key>
                 <string>{9,-7}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{34,56},{107,131}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_10.gif</key>
+            <key>explosion2_10.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{143,396},{139,187}}</string>
+                <string>{{191,437},{139,187}}</string>
                 <key>offset</key>
                 <string>{1,16}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{10,5},{139,187}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_11.gif</key>
+            <key>explosion2_11.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{294,390},{139,189}}</string>
+                <string>{{193,296},{139,189}}</string>
                 <key>offset</key>
                 <string>{1,15}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{10,5},{139,189}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_12.gif</key>
+            <key>explosion2_12.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,583},{129,159}}</string>
+                <string>{{380,459},{129,159}}</string>
                 <key>offset</key>
                 <string>{-4,26}</string>
                 <key>rotated</key>
@@ -69,23 +69,23 @@
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_13.gif</key>
+            <key>explosion2_13.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{133,585},{123,159}}</string>
+                <string>{{2,590},{123,159}}</string>
                 <key>offset</key>
                 <string>{-2,29}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{15,6},{123,159}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_14.gif</key>
+            <key>explosion2_14.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,744},{121,155}}</string>
+                <string>{{2,836},{121,155}}</string>
                 <key>offset</key>
                 <string>{-2,29}</string>
                 <key>rotated</key>
@@ -95,23 +95,23 @@
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_15.gif</key>
+            <key>explosion2_15.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{339,744},{119,157}}</string>
+                <string>{{2,715},{119,157}}</string>
                 <key>offset</key>
                 <string>{-4,32}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{15,4},{119,157}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_16.gif</key>
+            <key>explosion2_16.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{125,746},{113,143}}</string>
+                <string>{{125,836},{113,143}}</string>
                 <key>offset</key>
                 <string>{-4,41}</string>
                 <key>rotated</key>
@@ -121,23 +121,23 @@
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_17.gif</key>
+            <key>explosion2_17.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,901},{113,115}}</string>
+                <string>{{240,725},{113,115}}</string>
                 <key>offset</key>
                 <string>{-4,57}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{18,0},{113,115}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_18.gif</key>
+            <key>explosion2_18.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{117,901},{111,111}}</string>
+                <string>{{357,729},{111,111}}</string>
                 <key>offset</key>
                 <string>{-4,59}</string>
                 <key>rotated</key>
@@ -147,10 +147,10 @@
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_2.gif</key>
+            <key>explosion2_2.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{284,581},{123,161}}</string>
+                <string>{{384,296},{123,161}}</string>
                 <key>offset</key>
                 <string>{1,-10}</string>
                 <key>rotated</key>
@@ -160,92 +160,92 @@
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_3.gif</key>
+            <key>explosion2_3.gif</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,2},{153,203}}</string>
                 <key>offset</key>
                 <string>{2,-13}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{4,26},{153,203}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_4.gif</key>
+            <key>explosion2_4.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,392},{139,189}}</string>
+                <string>{{2,157},{139,189}}</string>
                 <key>offset</key>
                 <string>{-2,-7}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{7,27},{139,189}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_5.gif</key>
+            <key>explosion2_5.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{157,2},{145,203}}</string>
+                <string>{{207,2},{145,203}}</string>
                 <key>offset</key>
                 <string>{-1,2}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{5,11},{145,203}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_6.gif</key>
+            <key>explosion2_6.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{304,2},{145,201}}</string>
+                <string>{{207,149},{145,201}}</string>
                 <key>offset</key>
                 <string>{-4,5}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{2,9},{145,201}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_7.gif</key>
+            <key>explosion2_7.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{149,207},{143,187}}</string>
+                <string>{{2,298},{143,187}}</string>
                 <key>offset</key>
                 <string>{-7,10}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,11},{143,187}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_8.gif</key>
+            <key>explosion2_8.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,207},{145,183}}</string>
+                <string>{{187,578},{145,183}}</string>
                 <key>offset</key>
                 <string>{-6,13}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{0,10},{145,183}}</string>
                 <key>sourceSize</key>
                 <string>{157,229}</string>
             </dict>
-            <key>frame_9.gif</key>
+            <key>explosion2_9.gif</key>
             <dict>
                 <key>frame</key>
-                <string>{{304,205},{145,183}}</string>
+                <string>{{2,443},{145,183}}</string>
                 <key>offset</key>
                 <string>{1,15}</string>
                 <key>rotated</key>
-                <false/>
+                <true/>
                 <key>sourceColorRect</key>
                 <string>{{7,8},{145,183}}</string>
                 <key>sourceSize</key>
@@ -261,7 +261,7 @@
             <key>size</key>
             <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:33779864c687e32c90b742be8c1163ff$</string>
+            <string>$TexturePacker:SmartUpdate:2bd08a375b6e4f9f9c601e965ba6e844$</string>
             <key>textureFileName</key>
             <string>explosion2.pvr.ccz</string>
         </dict>
